[package]
name = "poem-fib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.4.3", features = ["serde"]}
num-traits = "0.2.15"
poem = "1.3.48"
serde = {version = "1.0.147", features  = ["derive", "serde_derive"]}
serde_json = "1.0.87"
tokio = {version = "1.21.2", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
